--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 .vh-85 {
   height: 85vh;
 }
@@ -13,8 +18,9 @@
 }
 
 .footer {
-  padding: 30px;
-  background-color: rgb(248, 249, 250);
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
 
 .pointer {
@@ -27,27 +33,8 @@
   margin-right: 10px;
 }
 
-
 /* Home Banner */
 
-.home-banner {
-  position: relative;
-  background-color: black;
-  margin-bottom: 30px;
-  /* background-image: linear-gradient(90deg, black, white, black); */
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-  height: 400px;
-  overflow: hidden;
-
-}
-.home-banner img {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
 .center-white-gradient {
   position: absolute;
   width: 100%;
